Profile: Fix overlapping text - see #435

--- a/github-dark.css
+++ b/github-dark.css
@@ -1262,9 +1262,14 @@
   /* invert #fff to #181818 */
   /* https://github.com/sujitpal/statlearning-notebooks/blob/master/src/chapter2.ipynb */
   .output_area img, table.pricing-table, div[id^="event-first"] img,
-  div[id^="event-joined-github"] img, div[id^="event-created"] img, .project-preview-img img {
+  div[id^="event-joined-github"] img, div[id^="event-created"] img,
+  .project-preview-img img {
     -webkit-filter: invert(90.5%) hue-rotate(180deg) saturate(200%) !important;
             filter: invert(90.5%) hue-rotate(180deg) saturate(200%) !important;
+  }
+  /* workaround filter creating a stacking context */
+  .event-first-issue, .event-first-pull-request {
+    opacity: .999 !important;
   }
   /* brighten language colors */
   .language-color {
